GEtting refactoring json via API